# asv-project-May_2026

./: .env.example  .gitignore  CLAUDE.md  README.md  morning_briefing.bat  pipeline_prompt.txt  run_silent.vbs  send_briefing.py
.claude/agents/: asv-hub-builder.md  docs-updater.md  dsp-signal-validator.md  fpga-verilog-engineer.md  hw-validation.md  project-director.md  project-educator.md  systems-integrator.md  usv-daily-briefing.md  verilog-sim-runner.md  weekly-project-auditor.md
docs/: CONSOLIDATED_CONTEXT.md  TRAJECTORY.md  component_audit_june25.md  component_audit_june28.md  gowin_synthesis_steps.md  home_depot_list.md  hull_construction_guide.md  progress.md  weekly_plan.txt  weekly_planner.py
esp32/buoy_firmware/: buoy_firmware.ino  chirp_generator.h
esp32/vehicle_firmware/: motor_control.h  mpu6050_driver.h  sonar_driver.h  vehicle_firmware.ino
fpga/constraints/: adc_interface.cst  fir_test_top.cst  top_level.cst  uart_rx.cst  uart_tx.cst
fpga/sim/: out_adc.out  out_adc_check.out  out_adc_interface.vvp  out_cic.out  out_cic_decimator.vvp  out_fir1.out  out_fir2.out  out_fir_bank1.vvp  out_fir_bank2.vvp  out_mf1.out  out_mf2.out  out_pd.out  out_uart.out  out_uart_check.out  out_uart_tx.vvp  tb_adc_interface.v  tb_cic_decimator.v  tb_fir_filter_bank1.v  tb_fir_filter_bank2.v  tb_matched_filter_1.v  tb_matched_filter_2.v  tb_peak_detector.v  tb_top_level.v  tb_uart_rx.v  tb_uart_tx.v
fpga/src/: adc_interface.v  cic_decimator.v  fir_filter_bank1.v  fir_filter_bank2.v  fir_test_top.v  packet_framer.v  (+6 more)
hub/: asv_hub_v2.html  asv_hub_v3.html
ros2_ws/src/acoustic_homing/: package.xml  setup.cfg  setup.py
ros2_ws/src/acoustic_homing/acoustic_homing/: acoustic_homing_node.py  mission_state_machine.py
ros2_ws/src/fpga_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/fpga_bridge/fpga_bridge/: fpga_uart_node.py
(+42 files in other folders)
