<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fpga_bridge</name>
  <version>0.1.0</version>
  <description>Reads the Tang Nano 20K FPGA's 8-byte UART packet stream over /dev/ttyAMA0 and republishes /acoustic/corr_snr, /acoustic/peak_lag, /acoustic/target_id.</description>
  <maintainer email="mirthmoh@gmail.com">Mirthun Mohan</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
